# fl-offshore

./: README.md  ai4i2020_balanced.csv  ai4i2020_imbalanced.csv  balancing_data.ipynb  logreg_model.pkl  nb_results.ipynb  nb_unique_dataset.ipynb  pyproject.toml  run_experiments.py
flowersimulation/: __init__.py  client_app.py  nb_explore.ipynb  server_app.py  task.py
models/: logreg_model_FedAdagrad_balanced_100_0_0_1145661099.pkl  logreg_model_FedAdagrad_balanced_100_0_0_1282538739.pkl  logreg_model_FedAdagrad_balanced_100_0_0_1329531353.pkl  logreg_model_FedAdagrad_balanced_100_0_0_1410143363.pkl  logreg_model_FedAdagrad_balanced_100_0_0_1835732737.pkl  logreg_model_FedAdagrad_balanced_100_0_0_1954324947.pkl  logreg_model_FedAdagrad_balanced_100_0_0_200496737.pkl  logreg_model_FedAdagrad_balanced_100_0_0_428956419.pkl  logreg_model_FedAdagrad_balanced_100_0_0_633816299.pkl  logreg_model_FedAdagrad_balanced_100_0_0_794161987.pkl  logreg_model_FedAdagrad_balanced_100_0_1_1145661099.pkl  logreg_model_FedAdagrad_balanced_100_0_1_1282538739.pkl  logreg_model_FedAdagrad_balanced_100_0_1_1329531353.pkl  logreg_model_FedAdagrad_balanced_100_0_1_1410143363.pkl  logreg_model_FedAdagrad_balanced_100_0_1_1835732737.pkl  logreg_model_FedAdagrad_balanced_100_0_1_1954324947.pkl  logreg_model_FedAdagrad_balanced_100_0_1_200496737.pkl  logreg_model_FedAdagrad_balanced_100_0_1_428956419.pkl  logreg_model_FedAdagrad_balanced_100_0_1_633816299.pkl  logreg_model_FedAdagrad_balanced_100_0_1_794161987.pkl  logreg_model_FedAdagrad_balanced_100_30_0_1145661099.pkl  logreg_model_FedAdagrad_balanced_100_30_0_1282538739.pkl  logreg_model_FedAdagrad_balanced_100_30_0_1329531353.pkl  logreg_model_FedAdagrad_balanced_100_30_0_1410143363.pkl  logreg_model_FedAdagrad_balanced_100_30_0_1835732737.pkl  logreg_model_FedAdagrad_balanced_100_30_0_1954324947.pkl  logreg_model_FedAdagrad_balanced_100_30_0_200496737.pkl  logreg_model_FedAdagrad_balanced_100_30_0_428956419.pkl  logreg_model_FedAdagrad_balanced_100_30_0_633816299.pkl  (+425 more)
(+1372 files in other folders)
