[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl-offshore"
version = "1.0.0"
description = "Federated Learning for Offshore Systems"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.24.0",
    "flwr-datasets[vision]>=0.5.0",
    "scikit-learn>=1.6.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "flowersimulation.server_app:app"
clientapp = "flowersimulation.client_app:app"

[tool.flwr.app.config]
penalty = "l2"
num-server-rounds = 3
min-available-clients = 2
fl-algorithm = "FedAvg"
dataset-name = "ai4i2020_imbalanced.csv"
fraction = 0.39
failure-rate = 0
iid = 1
seed = 428956419

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 55

[tool.flwr.federations.supergrid-deployment]
address = "supergrid.flower.ai"
enable-account-auth = true
